k8s-yaml/lbpm-prod/lbpm-portal-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: lbpm-portal
  name: lbpm-portal
  namespace: prod
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: lbpm-portal
    spec:
      containers:
      - args:
        - -c
        - java -Denv=$ENV -Xmx512m -jar /app/lbpm-portal.jar
        command:
        - /bin/sh
        image: 192.168.11.53:8082/lbpm-portal-business-img:T27
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: lbpm-portal
        ports:
        - containerPort: 8080
          hostPort: 8888
          name: web
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /opt/logs
          name: lbpm-portal-log
        - mountPath: /opt/attachment
          name: lbpm-portal-attachment
        - mountPath: /mfbmsDataFile/signaturesFile/eloan
          name: lbpm-signatures
      restartPolicy: Always
      nodeSelector:
        lbpm: lbpm-prod
      volumes:
      - hostPath:
          path: /app/logs/lbpm-portal-prod
        name: lbpm-portal-log
      - name: lbpm-portal-attachment
        nfs:
          path: /volume1/lbpm-portal/PROD/attachment
          server: 192.168.3.64
      - name: lbpm-signatures
        nfs:
          path: /volume1/LuYin/signaturesFile/eloan
          server: 192.168.3.34
