k8s-yaml/lbpm-prod/lbpm-portal-svc-prod.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lbpm-portal-service-prod
  name: lbpm-portal-service-prod
  namespace: prod
spec:
  clusterIP: 10.254.224.44
  ports:
  - port: 8888
    protocol: TCP
    targetPort: web
  selector:
    app: lbpm-portal-prod
  type: ClusterIP
