k8s-yaml/lbpm-prod/lbpm-portal-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lbpm-portal-service
  name: lbpm-portal-service
  namespace: prod
spec:
  ports:
  - port: 8888
    protocol: TCP
    targetPort: web
  selector:
    app: lbpm-portal
  type: ClusterIP
